bela-sys/vendor/bela/include/Bela.h


typedef enum
{
	BelaHw_NoHw = -1, 
	BelaHw_Bela, 
	BelaHw_BelaMini, 
	BelaHw_GemStereo, 
	BelaHw_GemMulti, 
	BelaHw_Salt, 
	BelaHw_CtagFace, 
	BelaHw_CtagBeast, 
	BelaHw_CtagFaceBela, 
	BelaHw_CtagBeastBela, 
	BelaHw_BelaMiniMultiAudio, 
	BelaHw_BelaMiniMultiTdm, 
	BelaHw_BelaMultiTdm, 
	BelaHw_BelaMiniMultiI2s, 
	BelaHw_BelaEs9080, 
	BelaHw_BelaRevC, 
	BelaHw_Batch, 
} BelaHw;
struct option;
typedef struct {
	const float * const audioIn;
	float * const audioOut;
	const float * const analogIn;
	float * const analogOut;
	uint32_t * const digital;
	const uint32_t audioFrames;
	const uint32_t audioInChannels;
	const uint32_t audioOutChannels;
	const float audioSampleRate;
	const uint32_t analogFrames;
	const uint32_t analogInChannels;
	const uint32_t analogOutChannels;
	const float analogSampleRate;
	const uint32_t digitalFrames;
	const uint32_t digitalChannels;
	const float digitalSampleRate;
	const uint64_t audioFramesElapsed;
	const uint32_t multiplexerChannels;
	const uint32_t multiplexerStartingChannel;
	const float * const multiplexerAnalogIn;
	const uint32_t audioExpanderEnabled;
	const uint32_t flags;
	char projectName[MAX_PROJECTNAME_LENGTH];
	const unsigned int underrunCount;
	const uint32_t thisThread;
	const uint32_t threadCount;
} BelaContext;
struct BelaChannelGainArray {
	unsigned int length;
	struct BelaChannelGain* data;
};
typedef struct {
	int periodSize;
	int useAnalog;
	int useDigital;
	int numAudioInChannels;
	int numAudioOutChannels;
	int numAnalogInChannels;
	int numAnalogOutChannels;
	int numDigitalChannels;
	int beginMuted;
	float dacLevel;
	float adcLevel;
	float pgaGain[2];
	float headphoneLevel;
	int numMuxChannels;
	unsigned int audioExpanderInputs;
	unsigned int audioExpanderOutputs;
	int pruNumber;
	char pruFilename[MAX_PRU_FILENAME_LENGTH];
	int detectUnderruns;
	int verbose;
	int enableLED;
	int stopButtonPin;
	int highPerformanceMode;
	int interleave;
	int analogOutputsPersist;
	int uniformSampleRate;
	unsigned int audioThreadStackSize;
	unsigned int auxiliaryTaskStackSize;
	bool (*setup)(BelaContext*, void*);
	void (*render)(BelaContext*, void*);
	void (*cleanup)(BelaContext*, void*);
	int ampMutePin;
	void (*audioThreadDone)(BelaContext*, void*);
	char* codecMode;
	struct BelaChannelGainArray audioInputGains;
	struct BelaChannelGainArray headphoneGains;
	struct BelaChannelGainArray adcGains;
	struct BelaChannelGainArray lineOutGains;
	uint32_t disabledDigitalChannels;
	unsigned int threadCount;
	void (*render_pre)(BelaContext*, void*);
	void (*render_post)(BelaContext*, void*);
	float audioSampleRate;
#ifdef __arm__
	char unused[204];
#endif 
	BelaHw board;
	char* projectName;
} BelaInitSettings;
bool setup(BelaContext *context, void *userData);
void render(BelaContext *context, void *userData);
void cleanup(BelaContext *context, void *userData);
int Bela_initAudio(BelaInitSettings *settings, void *userData);
int Bela_startAudio();
int Bela_runInSameThread();
void Bela_stopAudio();
void Bela_cleanupAudio();
void Bela_setUserData(void* newUserData);
void Bela_requestStop();
int Bela_stopRequested();
typedef struct {
	unsigned int count; 
	unsigned int currentCount; 
	long long unsigned int busy; 
	long long unsigned int total; 
	struct timespec tic; 
	struct timespec toc; 
	float percentage; 
} BelaCpuData;
int Bela_cpuMonitoringInit(int count);
BelaCpuData* Bela_cpuMonitoringGet();
void Bela_cpuTic(BelaCpuData* data);
void Bela_cpuToc(BelaCpuData* data);
int Bela_setLineOutLevel(int channel, float decibel);
int Bela_setDacLevel(int channel, float decibels);
int Bela_setDACLevel(float decibels);
int Bela_setAdcLevel(int channel, float decibels);
int Bela_setADCLevel(float decibels);
int Bela_setAudioInputGain(int channel, float decibels);
int Bela_setPgaGain(float decibels, int channel);
int Bela_setHpLevel(int channel, float decibels);
int Bela_setHeadphoneLevel(float decibels);
int Bela_muteSpeakers(int mute);
void Bela_initRtBackend();