bela-sys/src/bindings.rs

unsafe extern "C" {
    #[doc = " \\brief Initialise audio and sensor rendering environment.\n\n This function prepares audio rendering in Bela. It should be called from main() sometime\n after command line option parsing has finished. It will initialise the rendering system, which\n in the process will result in a call to the user-defined setup() function.\n\n \\param settings Data structure holding system settings, including numbers of channels, frame sizes,\n volume levels and other information.\n \\param userData An opaque pointer to a user-defined data structure which will be passed to\n setup(), render() and cleanup(). You can use this to pass custom information\n to the rendering functions, as an alternative to using global variables.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_initAudio(
        settings: *mut BelaInitSettings,
        userData: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Begin processing audio and sensor data.\n\n This function will start the Bela audio/sensor system. After this function is called, the\n system will make periodic calls to render() until Bela_stopAudio() is called.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_startAudio() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Begin processing audio and sensor data in the same thread as the caller.\n\n This function will start the Bela audio/sensor system. After this function is called, the\n system will make periodic calls to render() until Bela_stopAudio() is called.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_runInSameThread() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Stop processing audio and sensor data.\n\n This function will stop the Bela audio/sensor system. After this function returns, no further\n calls to render() will be issued."]
    pub fn Bela_stopAudio();
}
unsafe extern "C" {
    #[doc = " \\brief Clean up resources from audio and sensor processing.\n\n This function should only be called after Bela_stopAudio(). It will release any\n internal resources for audio and sensor processing. In the process, it will call the\n user-defined cleanup() function."]
    pub fn Bela_cleanupAudio();
}
unsafe extern "C" {
    #[doc = " \\brief Set the `userData` variable, which is passed to setup(), render() and cleanup().\n\n This function can be used to override `userData` after it has been set by Bela_initAudio().\n\n \\note This function is experimental and may be removed in a future version."]
    pub fn Bela_setUserData(newUserData: *mut ::core::ffi::c_void);
}
unsafe extern "C" {
    #[doc = " \\brief Tell the Bela program to stop.\n\n This can be safely called anywhere in the code to tell the audio thread, and\n all threads monitoring Bela_stopRequested() that they should stop at the\n earliest occasion. The program will not stop immediately. If the render()\n function is currently running, it will keep running until it concludes its\n current execution, but will not be called again. The program's execution\n will stop when all threads have completed their execution. For this reason,\n all threads should check for Bela_stopRequested() to be notified when\n Bela_requestStop() has been called."]
    pub fn Bela_requestStop();
}
unsafe extern "C" {
    #[doc = " \\brief Check whether the program should stop.\n\n If you have several threads of execution, each of them should be regularly\n calling this function and complete execution as soon as possible if a\n non-zero value is returned.\n\n @return a non-zero value if stop has been requested, 0 otherwise."]
    pub fn Bela_stopRequested() -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct timespec {
    pub tv_sec: __time_t,
    pub tv_nsec: __syscall_slong_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of timespec"][::core::mem::size_of::<timespec>() - 16usize];
    ["Alignment of timespec"][::core::mem::align_of::<timespec>() - 8usize];
    ["Offset of field: timespec::tv_sec"][::core::mem::offset_of!(timespec, tv_sec) - 0usize];
    ["Offset of field: timespec::tv_nsec"][::core::mem::offset_of!(timespec, tv_nsec) - 8usize];
};
pub type clockid_t = __clockid_t;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BelaCpuData {
    #[doc = "< Number of samples (tic/toc pairs) in a acquisition cycle. Use 0 to disable."]
    pub count: ::core::ffi::c_uint,
    #[doc = "< Number of tics in current acquisition cycle"]
    pub currentCount: ::core::ffi::c_uint,
    #[doc = "< Total CPU time spent being busy (between tic and toc) during the current acquisition cycle"]
    pub busy: ::core::ffi::c_ulonglong,
    #[doc = "< Total CPU time (between tic and previous tic) during the current acquisition cycle"]
    pub total: ::core::ffi::c_ulonglong,
    #[doc = "< Time of last tic"]
    pub tic: timespec,
    #[doc = "< Time of last toc"]
    pub toc: timespec,
    #[doc = "< Average CPU usage during previous acquisition cycle"]
    pub percentage: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BelaCpuData"][::core::mem::size_of::<BelaCpuData>() - 64usize];
    ["Alignment of BelaCpuData"][::core::mem::align_of::<BelaCpuData>() - 8usize];
    ["Offset of field: BelaCpuData::count"][::core::mem::offset_of!(BelaCpuData, count) - 0usize];
    ["Offset of field: BelaCpuData::currentCount"]
        [::core::mem::offset_of!(BelaCpuData, currentCount) - 4usize];
    ["Offset of field: BelaCpuData::busy"][::core::mem::offset_of!(BelaCpuData, busy) - 8usize];
    ["Offset of field: BelaCpuData::total"][::core::mem::offset_of!(BelaCpuData, total) - 16usize];
    ["Offset of field: BelaCpuData::tic"][::core::mem::offset_of!(BelaCpuData, tic) - 24usize];
    ["Offset of field: BelaCpuData::toc"][::core::mem::offset_of!(BelaCpuData, toc) - 40usize];
    ["Offset of field: BelaCpuData::percentage"]
        [::core::mem::offset_of!(BelaCpuData, percentage) - 56usize];
};
unsafe extern "C" {
    #[doc = " Set internal CPU monitoring for the audio thread.\n @param count Number of samples (tic/toc pairs) in a acquisition cycle. Use 0 to disable.\n @return 0 on success, an error code otherwise."]
    pub fn Bela_cpuMonitoringInit(count: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " Get stats about internal CPU monitoring.\n\n @return a pointer to a BelaCpuData structure which contains data about the\n CPU usage of the audio thread."]
    pub fn Bela_cpuMonitoringGet() -> *mut BelaCpuData;
}
unsafe extern "C" {
    #[doc = " Start measuring CPU time. When `data->currentCount` reaches `data->count`, a\n acquisition cycle is completed. `data->percentage` gives the average CPU busy time\n during the latest completed acquisition cycle.\n\n @param data The `count` field is an input and needs to be populated before calling. Other fields are used as I/O by the function."]
    pub fn Bela_cpuTic(data: *mut BelaCpuData);
}
unsafe extern "C" {
    #[doc = " Stop measuring CPU time.\n\n @param data The `count` field is an input and needs to be populated before calling. Other fields are used as I/O by the function."]
    pub fn Bela_cpuToc(data: *mut BelaCpuData);
}
unsafe extern "C" {
    #[doc = " \\brief Set the level of the audio line out.\n\n \\b Important: do not call this function from within render(), as it does not make\n any guarantees on real-time performance.\n\n \\param channel The channel to set. Use a negative value to set all channels.\n \\param decibels Level of the line output. Valid values will depend on the codec in use.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_setLineOutLevel(channel: ::core::ffi::c_int, decibel: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Set the level of the audio DAC.\n\n DEPRECATED.\n\n Use `Bela_setLineOutLevel()` instead."]
    pub fn Bela_setDacLevel(channel: ::core::ffi::c_int, decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " DEPRECATED.\n\n Equivalent to `Bela_setDacLevel(-1, decibels)`."]
    pub fn Bela_setDACLevel(decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Set the level of the audio ADC.\n\n This function sets the level of the audio input. It does not affect the level of the\n (non-audio) analog inputs.\n\n \\b Important: do not call this function from within render(), as it does not make\n any guarantees on real-time performance.\n\n \\param channel The channel to set. Use a negative value to set all channels.\n \\param decibels Level of the ADC input. Valid levels range from -12 (lowest) to\n 0 (highest) in steps of 1.5dB. Levels between increments of 1.5 will be rounded down.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_setAdcLevel(channel: ::core::ffi::c_int, decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " DEPRECATED.\n\n Equivalent to `Bela_setAdcLevel(-1, decibels)`."]
    pub fn Bela_setADCLevel(decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Set the gain of the audio input preamplifier.\n\n This function sets the level of the Programmable Gain Amplifier(PGA), which\n amplifies the signal before the ADC.\n\n \\b Important: do not call this function from within render(), as it does not make\n any guarantees on real-time performance.\n\n \\param channel The channel to set. Use a negative value to set all channels.\n \\param decibels Level of the PGA Valid levels range from 0 (lowest) to\n 59.5 (highest) in steps of 0.5dB. Levels between increments of 0.5 will be rounded.\n channel 1 is right\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_setAudioInputGain(channel: ::core::ffi::c_int, decibels: f32)
    -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " DEPRECATED.\n\n Equivalent to `Bela_setAudioInputGain(channel, decibels)`."]
    pub fn Bela_setPgaGain(decibels: f32, channel: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Set the level of the onboard headphone amplifier.\n\n This function sets the level of the headphone output only (3-pin connector on the Bela\n cape or the output jack on the BeagleBone Audio Cape). It does not affect the level of the\n speakers or the line out pads on the cape.\n\n \\b Important: do not call this function from within render(), as it does not make\n any guarantees on real-time performance.\n\n \\param channel The channel to set. Use a negative value to set all channels.\n \\param decibels Level of the headphone output. Valid levels range from -63.5 (lowest) to\n 0 (highest) in steps of 0.5dB. Levels between increments of 0.5 will be rounded down.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_setHpLevel(channel: ::core::ffi::c_int, decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " DEPRECATED\n Equivalent to Bela_setHpLevel(-1, decibels);"]
    pub fn Bela_setHeadphoneLevel(decibels: f32) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\brief Mute or unmute the onboard speaker amplifiers.\n\n This function mutes or unmutes the amplifiers on the Bela cape. Whether the speakers begin\n muted or unmuted depends on the BelaInitSettings structure passed to Bela_initAudio().\n\n \\b Important: do not call this function from within render(), as it does not make\n any guarantees on real-time performance.\n\n \\param mute 0 to enable the speakers, nonzero to mute the speakers.\n\n \\return 0 on success, or nonzero if an error occurred."]
    pub fn Bela_muteSpeakers(mute: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " \\defgroup warppers Wrappers for real-time functionalities.\n\n @{"]
    pub fn Bela_initRtBackend();
}
